== Changelog ==

= 4.7.2 =

* Added option to display the number of comments only.
* Fixed the displaying of comments number.

= 4.7.1 =

* Reverted widget title escaping which can break use of the widget_title filter. Thanks to @mlang38 for reporting this.
* Fixed link to review page on wordpress.org when viewing the plugin list page.

= 4.7.0 =

* Added new option to filter posts in the same category/tag/author/custom-field by searching for the title of the main post.
* Added "Post type", "Relevance (when searching)", and "Preserve post parent order" in "Order posts by" option.
* Added new options when changing the query in single posts or in an archive page.
* Now custom post types are supported when changing the query in single posts.
* Reorganized some sub-panels and added colors in panel titles.
Checked all files with WordPress Coding Standard for PHPCS.
* Removed old comment for HTML in widget introduction.
* Fixed displaying the query in debug section when the query contains multidimensional arrays.
* Hardened security.

= 4.6.0 =

* Added option to get posts from the current archive page (category, tag, and author).
* Changed wp_kses to wp_kses_post for widget introduction.
* Now debug options are displayed without execution.

= 4.5.2 =

* Fixed opening widgets containers when used with SiteOrigin page builder.

= 4.5.1 =

* Fixed displaying UTF-8 charset when shortening titles and excerpts.

= 4.5.0 =

* Added options for title and WordPress-generated excerpt length unit.
* Added filter for HTML arrows in title and excerpt.
* Added CSS ID selector to ul.

= 4.4.0 =

* Added option to shorten post titles.

= 4.3.0 =

* Added option to get posts from the current tag, when on a single post.
* Added option to assign post classes via `get_post_class()`.
* Fixed empty p tag when no excerpt or no image.
* Fixed post modification date/time.
* Minor fixes.

= 4.2.0 =

* Added option to display the post time and modification time.