@@ -290,6 +290,7 @@ function pis_get_posts_in_sidebar( $args ) {
 		'comments_text'           => esc_html__( 'Comments:', 'posts-in-sidebar' ),
 		'linkify_comments'        => false,
 		'display_comm_num_only'   => false,
+		'hide_zero_comments'      => false,
 		'utility_sep'             => '|',
 		'utility_after_title'     => false,
 		'utility_before_title'    => false,
@@ -1383,6 +1384,7 @@ function pis_get_posts_in_sidebar( $args ) {
 						'pis_post_id'           => $pis_query->post->ID,
 						'link_to_comments'      => $linkify_comments,
 						'display_comm_num_only' => $display_comm_num_only,
+						'hide_zero_comments'    => $hide_zero_comments,
 						'gravatar_display'      => $gravatar_display,
 						'gravatar_position'     => $gravatar_position,
 						'gravatar_author'       => get_the_author_meta( 'ID' ),
