@@ -3,6 +3,7 @@
 = 4.7.2 =
 
 * Added option to display the number of comments only.
+* Added option to hide the comments section if there is no comment.
 * Fixed the displaying of comments number.
 
 = 4.7.1 =
